--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,10 @@ header nav a.activo{
 
 .pelicula-principal .boton i{
     margin-right: 1em;
+    text-decoration: none;
+}
+.pelicula-principal .boton {
+    text-decoration: none;
 }
 
 /* Pelicula vista */
