--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body{
 
 header{
     padding: 30px 0;
+    background-color: #0A0906;
 }
 
 header .contenedor{
@@ -52,7 +53,7 @@ header nav a.activo{
 
 .pelicula-principal {
     font-size: 16px;
-    min-height: 60.62em;
+    min-height: 40.62em;
     color: #FFF;
     background: url(../ActividadUno/img/spiderman1.jpg);
     background-position: center center;
