--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,7 @@ header nav a.activo{
 	padding: 30px 0;
 	overflow: hidden;
 	scroll-behavior: smooth;
+    position: relative;
     
 }
 
@@ -277,6 +278,7 @@ header nav a.activo{
     width: 100%;
     vertical-align: top;
 }
+
 
 
 
